# term

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .in  README.md  compile_flags.txt  conanfile.txt  includes.txt  meson.build  requirements.txt  uncrustifytest.cc
.github/workflows/: ci-meson.yml  codeql.yml
_test/: s  s.cc
doc/ads/: UI.md  index.md
examples/ex1/: ex1.cc
include/term/: _screen_window.hh  basic.hh  device.hh  display.hh  element_template.hh  event.hh  geometry.hh  keyboard.hh  range.hh  range.hh.gch  screen.hh  string.hh  surface.hh  term.hh  term_interface.hh  text.hh  update.hh  visibility.hh  window.hh  window_event.hh
include/ui/: container.hh  controller.hh  element.hh  layout_container.hh  layout_element.hh  multi_container.hh  ui.hh  widget.hh  window.hh
include/util/: error.hh  rx-ranges.hh
src/: device.hh  display.cc  display.hh  event.hh  geometry.cc  keyboard.cc  keyboard.hh  screen.cc  screen_window.cc  string.cc  surface.cc  surface.hh  term.cc  term.hh  term_interface.hh  text.cc  text.hh  window.cc  window.hh
src/term/: display.cc  event.hh  geometry.cc  keyboard.cc  keyboard.hh  surface.cc  surface.hh  term.cc  term.hh  text.cc  text.hh  window.cc  window.hh  window_event.hh
src/ui/: container.cc  container.hh  controller.cc  element.cc  element.hh  frame.cc  frame.hh  frame_style.hh  layout_container.cc  layout_element.cc  multi_container.cc  ui.cc  ui.hh  visible_element.cc  widget.cc  widget.hh  window.cc  window.hh
src/util/: container.hh  error.cc  string.cc  visible_element.hh  xxh64.hpp
test/: test_display.cc  test_geometry.cc  test_keyboard.cc  test_layout.cc  test_screen.cc  test_surface.cc  test_term.cc  test_text.cc  test_window.cc
test/ui/: test_ui.cc  test_window.cc
